intergrated db into application, able to create, delete and edit tasks